namespace java ConsumerControl

service ConsumerControl {
bool ConsumerControl (1:bool onSwitch)
}
