namespace java NuclearControl

service NuclearControl {
bool StartNuclearControl (1:bool onSwitch)
}