namespace java Printing

service DataSender{
  string historyToString(),
  string printing(1:string dataa)
}
