namespace java SolarControl

service SolarControl {
bool StartSolarControl (1:bool onSwitch)
}