namespace java WindControl

service WindControl {
bool StartWindControl (1:bool onSwitch)
}